--- a/client/example.html
+++ b/client/example.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <title>Firebase-Passport Example</title>
-        <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.11/firebase.js'></script>
-        <script type='text/javascript' src='https://cdn.firebase.com/js/simple-login/1.3.2/firebase-simple-login.js'></script>
-        <script type='text/javascript' src='../client/firebase-passport-login.js'></script>
+        <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+        <script type='text/javascript' src='firebase-passport-login.js'></script>
         <script type='text/javascript'>
-            var ref = new Firebase('YOUR FIREBASE');
+            var ref = new Firebase('https://twt-dev-server-nh.firebaseio.com/');
             var auth = new FirebasePassportLogin(ref, function(error, user) {
               if (error) {
                 // an error occurred while attempting login
@@ -17,14 +16,15 @@
               } else {
                 // user is logged out
               }
-            }, "localhost:3000/auth/");
+            }, "https://localhost:8008/auth/");
             
             var login = function () {
-                auth.login('reddit');
+                auth.login('facebook');
             }
         </script>
     </head>
     <body>
-        <button onclick="login()">Login</button>
+      <button onclick="auth.login('facebook')">Login</button>
+      <button onclick="auth.logout()">Logout</button>
     </body>
 </html>
