--- a/client/example.html
+++ b/client/example.html
@@ -1,11 +1,10 @@
 <html>
     <head>
         <title>Firebase-Passport Example</title>
-        <script type='text/javascript' src='https://cdn.firebase.com/js/client/1.0.11/firebase.js'></script>
-        <script type='text/javascript' src='https://cdn.firebase.com/js/simple-login/1.3.2/firebase-simple-login.js'></script>
-        <script type='text/javascript' src='../client/firebase-passport-login.js'></script>
+        <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+        <script type='text/javascript' src='firebase-passport-login.js'></script>
         <script type='text/javascript'>
-            var ref = new Firebase('https://rigidflame-demo.firebaseio.com/');
+            var ref = new Firebase('https://twt-dev-server-nh.firebaseio.com/');
             var auth = new FirebasePassportLogin(ref, function(error, user) {
               if (error) {
                 // an error occurred while attempting login
@@ -13,15 +12,18 @@
               } else if (user) {
                 // user authenticated with Firebase
                 console.log('User ID: ' + user.uid + ', Provider: ' + user.provider);
+                console.log(user);
               } else {
                 // user is logged out
               }
-            }, "http://localhost:1337/auth/");
+            }, "https://localhost:8008/auth/");
+
+            auth._getAnonymousUid();
             
-            //auth.login('reddit');
         </script>
     </head>
     <body>
-        
+      <button onclick="auth.login('google')">Login</button>
+      <button onclick="auth.logout()">Logout</button>
     </body>
 </html>
