Added debugging code that can be switched on/off, renamed config/options, made more configurable

--- a/client/firebase-passport-login.html
+++ b/client/firebase-passport-login.html
@@ -1,2 +1,1 @@
-<link rel="import" href="../../firebase-element/firebase.html">
-<script src="firebase-passport-login.min.js"></script>
+<script src="firebase-passport-login.js"></script>
